# custom-stack-size-data-pack

./: .gitignore  README.md  beet-release.json  beet.json  pyproject.toml  tasks.py  tbump.toml
datapack/data/ab.custom_stack_size/functions/: install.mcfunction  main.mcfunction  uninstall.mcfunction
datapack/data/ab.custom_stack_size/modules/: selector.bolt  utils.bolt
datapack/data/americanbagel/advancements/ab.custom_stack_size/: root.json
datapack/data/global/advancements/: americanbagel.json
datapack/data/minecraft/tags/functions/: load.json
plugins/: gather_objectives.py
